# model-finetune-tool

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.yml  finetune.bat  finetune.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: design.md  quick-start.md  user-manual.md  windows-guide.md
docs/api/: reference.md
src/: __init__.py  config.py  main.py
src/dataset/: __init__.py
src/llm/: __init__.py
src/parser/: __init__.py
src/trainer/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_dataset.py  test_llm.py  test_parser.py  test_trainer.py
