[project]
name = "model-finetune-tool"
version = "0.1.0"
description = "方便的大模型微调工具"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "openai>=1.0,<2.0",
    "python-docx>=1.0,<2.0",
    "pymupdf>=1.23,<2.0",
    "markdown>=3.5,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "tqdm>=4.66,<5.0",
    "click>=8.0,<9.0",
    "pytest>=8.0,<9.0",
]

# 控制台脚本入口
[project.scripts]
finetune = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-x"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
